assets/css/style.css
html {
  font-family: arial;
  margin: 0px auto;
  max-width: 1024px;
}

#profile_pic {
  display: block;
  width: 300px;
  margin: 0px auto;
  padding: 20px;
  /*border: 1px solid #009;*/
  border-radius: 50px;
  -moz-border-radius: 50px;
}

#logo_container {
  width: 340px;
  margin: 0px auto;
  text-align: center;
}

.logo {
  width: 60px;
  margin: 13px 10px;
}

.logo:hover {
  width: 80px;
  margin: 3px 0px;
}

h1#hello, h1#im_andrew {
  text-align: center;
  margin: 10px auto;
  font-size: 80px;
}

#nav ul {
  margin: 0px;
  padding: 0px;
  list-style-type: none;
}

#nav ul li {
  text-align: center;
  margin: 0px;
  padding: 0px;
}

#nav ul li a {
  display: block;
  width: 100%;
  background-color: #009;
  font-weight: bold;
  font-size: 24px;
  text-decoration: none;
  color: #fff;
  padding: 10px;
}

#nav ul li a:hover, #nav ul li a:active {
  background-color: #004;
}

ul.code_list {
  margin: 0px;
  padding: 0px;
  list-style-type: none;
}
ul.code_list li:nth-child(odd) {
  background-color: #e4e4ff;
  padding: 5px;
}
ul.code_list li p.desc {
  font-size: 25px;
}
h3, p {
  text-align: center;
  margin-bottom: 20px;
}

h3 {
  font-size: 40px;
}

p {
  font-size: 30px;
}

#footer {
  clear: both;
  margin-top: 40px;
  border-top: 1px solid #009;
}

#footer p {
  font-size: 100%;
}

.blue {
  color: #009;
}

@media screen and (min-width: 800px) {
  #nav ul {
    position: relative;
    top: 0;
    height: 48px;
    border-top: 3px solid #009;
    border-bottom: 1px solid #009;
    background-color: #fff;
    color: #009;
  }
  #nav #menu_container {
    float: right;
    width: 400px;
  }
  #nav ul li a {
    display: inline-block;
    float: left;
    width: 70px;
    background-color: #fff;
    color: #009;
    }
  #nav ul li a:hover, #nav ul li a:active {
    color: #fff;
  }
}

@media screen and (min-width: 1024px) {
  #intro {
    width: 850px;
    margin: 20px auto;
  }
  #profile_pic_container {
    margin: 0px auto;
  }
  #profile_pic {
    float: left;
    margin-left: 65px;
    margin-bottom: 10px;
  }
  #logo_container {
    width: 80px;
    float: right;
    /*margin-bottom: 20px;*/
  }
  h1#hello {
    width: 360px;
    float: left;
    text-align: right;
    margin-top: 70px;
  }
  h3 {
    clear: both;
  }
}

